# ChessNavigator

./: .gitignore  CHANGELOG.md  ChessNavigator.py  ChessNavigator.spec  FEN_LIST.txt  InstallerCreatorScript.iss  InstallerCreatorScript_v2.iss  LICENSES.txt  PROBLEM_LIST.txt  README.md  Sample_PROBLEM_LIST.txt  TODO  build-from-spec.py  build.py  compositionloader.py  config.json  custom_pieces.py  custom_pieces.yml  djh-test.py  fairy_piece_blocks.json  fen_mapper.py  generate_windows_licences.py  longPROBLEM_LIST.txt  mkdocs.yml  my-long-list-pieces.txt  my-pieces.txt  mychess.py  piece_map.json  popeye-pieces.txt  prepare_build.py  pyproject.toml  requirements.txt  requirements_and_mkdocs.txt  square.py  test_mychess.py  version_info.txt  windowtest.py  zzmychess.py
base_svg/: script.sh
base_svg/fairy/: script_fairy.sh
djhchess/: custom_piece_load.py  custom_pieces.py  fen_mapper.py  fen_test.py  mychess.py  piece_test.py  pieces.py  square.py  test_mychess.py
docs/: chessgame.md  globals.md  gui.md  index.md
images/: script.sh  script.sh.txt
installer-assets/: LICENSES.txt  PostInstall.txt  THIRD_PARTY_LICENSES.txt  Welcome.txt  cheatsheet.html  license-python.txt
mydocs/: mkdocs.yml
old/: TODO  compositionloader.py  mkdocs.yml
old/python_chess_fairypieces/: README.rst  test.py
python_chess_fairypieces/: setup.py
python_chess_fairypieces/chess/: engine.py  gaviota.py  polyglot.py  syzygy.py
python_chess_fairypieces/docs/: conf.py  pgn.rst
python_chess_fairypieces/examples/: chess960_pos_list.py  push_san.py
(+12 files in other folders)
