[project]
name = "chessnavigator"
version = "3.4"
description = "Chess Problem Demonstration Software"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "pygame==2.6.1",
    "pyperclip==1.11.0",
    "pyyaml==6.0.3",
]

[dependency-groups]
dev = [
    "pyinstaller==6.18.0",
]
