[project]
name = "chessnavigator"
version = "3.5"
description = "Chess Problem Demonstration Software"
readme = "README.md"
requires-python = ">=3.11, <=3.14.3"
dependencies = [
    "pygame-ce>=2.5.7",
    "pyperclip==1.11.0",
    "pyyaml==6.0.3",
]

[dependency-groups]
dev = [
    "pyinstaller==6.18.0",
]
